# ffmpreg

./: .gitignore  CLAUDE.md  Cargo.toml  dx-cli.md  readme.md  run.sh
examples/: api_test.rs  banch_frames.rs  banch_packets.rs  demo_avi.rs  demo_h264.rs  demo_mp3.rs  demo_mpegts.rs
src/: lib.rs  main.rs  message.rs
src/cli/: args.rs  builder.rs  executor.rs  flag.rs  help.rs  iter.rs  mod.rs  parse.rs  parser.rs  runner.rs  stream.rs
src/cli/pipeline/: alac.rs  avi.rs  bmp.rs  flac.rs  flv.rs  jpeg.rs  m4a.rs  mkv.rs  mod.rs  mov.rs  mp3.rs  mp4.rs  mxf.rs  ogg.rs  ogv.rs  opus.rs  png.rs  tiff.rs  ts.rs  webp.rs
src/codecs/: mod.rs  register.rs
src/codecs/audio/: constants.rs  mod.rs
src/codecs/subtitle/: constants.rs
src/codecs/video/: constants.rs  mod.rs
src/container/: constants.rs  container.rs  mod.rs  register.rs
src/container/avi/: demuxer.rs  mod.rs  muxer.rs
src/container/flac/: demuxer.rs  format.rs  mod.rs  muxer.rs
src/container/mkv/: ebml.rs  mod.rs  muxer.rs
src/container/mp3/: demuxer.rs  mod.rs
src/container/mpegts/: demuxer.rs  mod.rs  muxer.rs
src/container/raw/: demuxer.rs  format.rs  mod.rs  muxer.rs
src/container/wav/: converter.rs  demuxer.rs  format.rs  header.rs  mod.rs  muxer.rs  register.rs  utils.rs
src/container/yuv/: demuxer.rs  format.rs  mod.rs  muxer.rs  register.rs
src/converter/: converter.rs  mod.rs  old_runner.rs  runner.rs
src/converter/options/: audio.rs  mod.rs  subtitle.rs  transform.rs  video.rs
src/core/: codec.rs  mod.rs  selector.rs  stream.rs  time.rs  transform.rs
src/core/frame/: audio.rs  iter.rs  mod.rs  subtitle.rs  video.rs
src/core/graph/: graph.rs  media.rs  mod.rs  node.rs
src/core/packet/: iter.rs  mod.rs  writer.rs
src/core/resampler/: channels.rs  mod.rs  (+2 more)
src/detector/: ext.rs  magic.rs  mod.rs
src/io/: cursor.rs  file.rs  file_type.rs  mod.rs  output.rs  reader.rs  seek.rs  stdio.rs  writer.rs
src/play/: runner.rs
src/probe/: builder.rs  mod.rs  model.rs  runner.rs
src/transforms/: mod.rs  normalize.rs  register.rs  volume.rs
src/utils/: color.rs  kv.rs  mod.rs
tests/: container.rs
(+50 files in other folders)
